--- a/HW5.ipynb
+++ b/HW5.ipynb
@@ -20,7 +20,7 @@
         "\n",
         "#### Students: S. Ulam (su001) and J. von Neuman (jvn001)\n",
         "\n",
-        "### Github link: [example Github link](https://github.com/SidBanerjee/ORIE4580-Simulation/blob/main/Notebooks/Unit0-Intro_Demos.ipynb)\n"
+        "### Github link: [Github link](https://github.com/bernebas/Bernebas/blob/main/HW5.ipynb)\n"
       ]
     },
     {
@@ -202,8 +202,6 @@
         }
       ],
       "source": [
-        "# Exact MLE for total population N using the hypergeometric likelihood\n",
-        "\n",
         "from math import comb\n",
         "import numpy as np\n",
         "\n",
@@ -213,12 +211,12 @@
         "k = 4    # tagged birds observed\n",
         "\n",
         "def Mle(N, M, n, k):\n",
-        "    # Likelihood L(N) = [C(M,k) * C(N-M, n-k)] / C(N, n)\n",
+        "\n",
         "    if N < max(M, n) or k > M or (n - k) > (N - M):\n",
         "        return 0.0\n",
         "    return comb(M, k) * comb(N - M, n - k) / comb(N, n)\n",
         "\n",
-        "# Search over plausible N (discrete)\n",
+        "\n",
         "N_min, N_max = max(M, n), 500  # wide upper bound\n",
         "N_vals = np.arange(N_min, N_max + 1)\n",
         "liks = np.array([Mle(N, M, n, k) for N in N_vals])\n",
@@ -358,24 +356,19 @@
       "source": [
         "import pandas as pd\n",
         "\n",
-        "# Load soup sales data\n",
         "data = pd.read_csv(\"Soup_sales_data.csv\")\n",
         "Y = data[\"Y\"]\n",
         "\n",
-        "cap = 40  # censoring limit\n",
+        "cap = 40\n",
         "\n",
-        "# Count how many days are below or at the limit\n",
         "below_cap = Y[Y < cap]\n",
         "n_uncensored = len(below_cap)\n",
         "n_censored = (Y == cap).sum()\n",
         "\n",
-        "# Compute sum of uncensored sales\n",
         "total_uncensored = below_cap.sum()\n",
         "\n",
-        "# MLE for p (from censored geometric model)\n",
         "p_hat = n_uncensored / (total_uncensored + cap * n_censored + n_uncensored)\n",
         "\n",
-        "# Display results\n",
         "print(f\"Total days: {len(Y)}\")\n",
         "print(f\"Uncensored days (<40): {n_uncensored}\")\n",
         "print(f\"Censored days (=40): {n_censored}\")\n",
@@ -457,28 +450,23 @@
         }
       ],
       "source": [
-        "# Compute and plot the classic birthday problem: P(at least one shared birthday)\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "from math import prod\n",
         "\n",
-        "# Range of n\n",
+        "\n",
         "n_vals = np.arange(10, 51)\n",
         "\n",
-        "# Compute probabilities via the complement: 1 - (365)_n / 365^n\n",
         "def p_at_least_one_match(n, days=365):\n",
-        "    # Product of (days - k)/days for k = 0..n-1\n",
         "    terms = [(days - k)/days for k in range(n)]\n",
         "    return 1 - prod(terms)\n",
         "\n",
         "p_vals = np.array([p_at_least_one_match(n) for n in n_vals])\n",
         "\n",
-        "# Find the smallest n with probability >= 0.5 (classic result is 23)\n",
         "n_half = n_vals[np.argmax(p_vals >= 0.5)] if np.any(p_vals >= 0.5) else None\n",
         "p_half = p_vals[np.where(n_vals == n_half)][0] if n_half is not None else None\n",
         "\n",
-        "# Plot\n",
         "plt.figure(figsize=(7,4.5))\n",
         "plt.plot(n_vals, p_vals, marker='o')\n",
         "plt.axhline(0.5, linestyle='--')\n",
@@ -552,11 +540,11 @@
         "import matplotlib.pyplot as plt\n",
         "from math import prod\n",
         "\n",
-        "# Theoretical probability from part (a)\n",
+        "\n",
         "def p_theoretical(n, days=365):\n",
         "    return 1 - prod([(days - k) / days for k in range(n)])\n",
         "\n",
-        "# Simulation parameters\n",
+        "\n",
         "days = 365\n",
         "n_values = np.arange(15, 31)\n",
         "num_sim = 20000  # number of simulations for each n\n",
@@ -567,13 +555,10 @@
         "theoretical = []\n",
         "\n",
         "for n in n_values:\n",
-        "    # Simulate: each trial is n birthdays uniformly on [0, days)\n",
         "    birthdays = np.random.randint(0, days, (num_sim, n))\n",
-        "    # Check if duplicates exist (shared birthday)\n",
         "    shared = np.any(np.diff(np.sort(birthdays, axis=1), axis=1) == 0, axis=1)\n",
         "    p_hat = np.mean(shared)\n",
         "\n",
-        "    # 95% CI for a proportion using normal approximation\n",
         "    se = np.sqrt(p_hat * (p_hat - 1) / num_sim * (-1)) if p_hat not in [0,1] else 0\n",
         "    z = 1.96\n",
         "    lower = max(0, p_hat - z * se)\n",
@@ -660,15 +645,12 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "# Load birthday data (assuming format: day, count)\n",
         "data = np.loadtxt(\"bdaydata.txt\", skiprows=1)\n",
         "days = np.arange(1, 366)\n",
         "births = data[:, 1]\n",
         "\n",
-        "# Normalize counts to probabilities\n",
         "births_prob = births / np.sum(births)\n",
         "\n",
-        "# Plot empirical distribution\n",
         "plt.figure(figsize=(10, 4))\n",
         "plt.bar(days, births_prob, width=1.0, color=\"skyblue\", edgecolor=\"none\")\n",
         "plt.title(\"Empirical Distribution of Birthdays\")\n",
@@ -677,9 +659,8 @@
         "plt.grid(alpha=0.3)\n",
         "plt.tight_layout()\n",
         "plt.show()\n",
-        "# --------------------------------------------------\n",
+        "\n",
         "# Empirical CDF\n",
-        "# --------------------------------------------------\n",
         "sorted_counts = np.sort(counts)\n",
         "n = len(sorted_counts)\n",
         "cdf_vals = np.arange(1, n+1) / n\n",
@@ -788,7 +769,7 @@
         "import pandas as pd\n",
         "from scipy import stats\n",
         "\n",
-        "# Load the data file (day + number of birthdays)\n",
+        "\n",
         "bday = pd.read_csv(\"bdaydata.txt\", sep=r\"\\s+\", header=0)\n",
         "births = bday.iloc[:, 1].to_numpy(dtype=float)\n",
         "\n",
@@ -876,16 +857,11 @@
         "import matplotlib.pyplot as plt\n",
         "from math import factorial\n",
         "\n",
-        "# --- Load data (day, count); collapse to 365 ---\n",
         "df = pd.read_csv(\"bdaydata.txt\", sep=r\"\\s+\", header=None)\n",
-        "# Exclude the header row by selecting rows from index 1 onwards\n",
         "counts = df.iloc[1:, 1].to_numpy(dtype=float)\n",
         "N = int(counts.sum())\n",
         "p_emp = counts / N   # empirical probabilities over 365 days\n",
         "\n",
-        "# --- Exact probability via polynomial DP ---\n",
-        "# Build coefficients of ∏_{i=1}^{365} (1 + p_i x) up to degree K\n",
-        "# If coeff[k] = e_k(p), then P(no-collision for n) = n! * e_n(p)\n",
         "def prob_shared_exact(p_vec, n_vals):\n",
         "    K = int(np.max(n_vals))\n",
         "    coeff = np.array([1.0], dtype=float)   # starts as 1\n",
@@ -1009,20 +985,11 @@
       },
       "outputs": [],
       "source": [
-        "#from scipy.misc import factorial\n",
-        "#fact_series = factorial(np.arange(n),exact=True)\n",
-        "#first_digit = np.zeros(n)\n",
-        "#for i in range(n):\n",
-        "# first_digit[i] = int(str(fact_series[i])[0])\n",
-        "\n",
-        "\n",
-        "# Benford's law on leading digits of n! for n = 1..1500\n",
-        "# Colab-ready: just run this cell.\n",
         "\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "# --- compute leading digits efficiently via logs ---\n",
+        "\n",
         "N = 1500\n",
         "k = np.arange(1, N + 1, dtype=np.float64)\n",
         "log_factorial_prefix = np.cumsum(np.log10(k))                 # log10(n!)\n",
@@ -1091,8 +1058,7 @@
         "import numpy as np\n",
         "from scipy.stats import chisquare\n",
         "\n",
-        "# --- reuse empirical counts from part (a) ---\n",
-        "# (if starting fresh, re-run the part (a) code first)\n",
+        "\n",
         "N = 1500\n",
         "k = np.arange(1, N + 1, dtype=np.float64)\n",
         "log_factorial_prefix = np.cumsum(np.log10(k))\n",
